--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,14 +39,14 @@
   
       @font-face {
         font-family: 'Vim';
-        src: url(fonts/VimSM.otf) format('opentype');
+        src: url(/assets/fonts/VimSM.otf) format('opentype');
         font-weight: bold;
         font-style: normal;
       }
   
       @font-face {
         font-family: 'Vim';
-        src: url(fonts/VimSM-Oblique.otf) format('opentype');
+        src: url(/assets/fonts/VimSM-Oblique.otf) format('opentype');
         font-weight: bold;
         font-style: italic;
       }
